Update email in impressum.html
change email to schule@foerderverein-kssh.de

--- a/impressum.html
+++ b/impressum.html
@@ -31,7 +31,7 @@
         Kirstin Künning (2. Vorsitzende)</p>
 
         <p>Kontakt:<br>
-        E-Mail: Förderverein-St.Hildegard@web.de</p>
+        E-Mail: schule@foerderverein-kssh.de</p>
 
         <p>Vereinsregister:<br>
         Nr. 5883 B<br>
